--- a/templates/rango/about.html
+++ b/templates/rango/about.html
@@ -1,30 +1,22 @@
-<!DOCTYPE html>
-
+{% extends 'rango/base.html' %}
 {% load staticfiles %}
 
-<html>
+{% block title_block %}About Rango{% endblock %}
 
-    <head>
-        <title>Rango</title>
-    </head>
+{% block body_block %}
+<h1>Rango says...</h1>
+<p>here is the about page.</p>
 
-    <body>
-        <h1>Rango says...</h1>
-        <p>here is the about page.</p>
+<div>
+    hey there partner! <br />
+    <strong>This tutorial has been put together by Zoe Stewart.</strong><br />
+</div>
 
-        <div>
-            hey there partner! <br />
-            <strong>This tutorial has been put together by Zoe Stewart.</strong><br />
-        </div>
+<div>
+    <img src="{% static 'images/rango.jpg' %}" alt="Picture of Rango" />
+</div>
 
-        <div>
-            <a href="/rango/">Index</a><br />
-            <img src="{% static 'images/rango.jpg' %}" alt="Picture of Rango" />
-        </div>
-
-        <div>
-            <img src="/media/cat.jpg" alt="Picture of a Cat" />
-        </div>
-    </body>
-
-</html>
+<div>
+    <img src="/media/cat.jpg" alt="Picture of a Cat" />
+</div>
+{% endblock %}
