--- a/templates/rango/index.html
+++ b/templates/rango/index.html
@@ -7,7 +7,12 @@
 <h1>Rango says...</h1>
 
 <div>
-    hey there partner! <br />
+    {% if user.is_authenticated %}
+    howdy {{ user.username }}!
+    {% else %}
+    hey there partner!
+    {% endif %}
+
     <strong>{{ boldmessage }}</strong>
 </div>
 
