--- a/templates/rango/about.html
+++ b/templates/rango/about.html
@@ -19,4 +19,8 @@
 <div>
     <img src="/media/cat.jpg" alt="Picture of a Cat" />
 </div>
+
+<div>
+    <p>Visits: {{ visits }}</p>
+</div>
 {% endblock %}
